test/parsing/errors/commentEOF.compopts
--detailed-errors # commentEOF-detailed.good
--no-detailed-errors # commentEOF-brief.good
